--- a/Text/Arbeit/Makefile
+++ b/Text/Arbeit/Makefile
@@ -10,7 +10,7 @@ PICS = Grafiken/hl-logo.pdf
 
 SOURCES = $(MAINFILE) Bibliographie/Bibli.bib Glossar/Arbeit_Glossar.tex \
 	Inhalt/Titelseite.tex Inhalt/LeereSeite.tex Inhalt/Erklaerung.tex \
-	Inhalt/Abstract.tex $(PICS)
+	Inhalt/Abstract.tex Inhalt/Einleitung.tex Inhalt/Konzepte_PA.tex $(PICS)
 
 OUTDIR = Ausgabe
 
@@ -27,11 +27,17 @@ enddoc/$(DOCNAME) : $(SOURCES)
 > pdflatex -output-directory=$(OUTDIR) $(MAINFILE)
 > cp $(OUTDIR)/$(MAINFILE_NO_EXTENSION).pdf $(FINDIR)/$(DOCNAME)
 
-.PHONY: clean set
+.PHONY: clean set bib glo
 
 set : $(SOURCES)
 > pdflatex -output-directory=$(OUTDIR) $(MAINFILE)
 > cp $(OUTDIR)/$(MAINFILE_NO_EXTENSION).pdf $(FINDIR)/$(DOCNAME)
+
+bib : $(SOURCES)
+> bibtex $(OUTDIR)/$(MAINFILE_NO_EXTENSION)
+
+glo : $(SOURCES)
+> makeglossaries -d $(OUTDIR) $(MAINFILE_NO_EXTENSION)
 
 clean :
 > rm $(OUTDIR)/$(MAINFILE_NO_EXTENSION).*
